--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -3,34 +3,48 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
+    <div class="login-box">
+        <div class="login-logo">
+            <img class="img-rounded" src="{{ asset('bundles/flowcodedashboard/images/flowcode-fav-oficial-alpha.png') }}" alt="Welcome to Amulen" />
+        </div><!-- /.login-logo -->
+        <div class="login-box-body">
+            {% if error %}
+                <p class="login-box-msg">{{ error|trans }}</p>
+            {% endif %}
+            <form action="{{ path("fos_user_security_check") }}" method="post">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                <div class="form-group has-feedback">
+                    <input type="text" id="username" name="_username" placeholder="{{ 'security.login.username'|trans }}" value="{{ last_username }}" required="required" class="form-control" />
+                    <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                </div>
+                <div class="form-group has-feedback">
+                    <input type="password" id="password" name="_password" placeholder="{{ 'security.login.password'|trans }}" required="required" class="form-control" />
+                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8">    
+                        <div class="checkbox icheck">
+                            <label>
+                                <input type="checkbox"> Remember Me
+                            </label>
+                        </div>                        
+                    </div>
+                    <div class="col-xs-4">
+                        <input class="btn btn-primary btn-block btn-flat" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+                    </div>
+                </div>
+            </form>
 
-<div class="row well well-lg col-md-4 col-md-offset-4">
-    <div class="text-center">
-        <img class="img-rounded" src="{{ asset('bundles/flowcodedashboard/images/flowcode-fav-oficial-alpha.png') }}" alt="Welcome to MiWeb" />
-        <h3>Panel de Control</h3>
+            <div class="social-auth-links text-center">
+                <p>- OR -</p>
+                <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using Facebook</a>
+                <a href="#" class="btn btn-block btn-social btn-google-plus btn-flat"><i class="fa fa-google-plus"></i> Sign in using Google+</a>
+            </div>
 
-        {% if error %}
-        <div class="">{{ error|trans }}</div>
-        {% endif %}
-    </div>
-    <form action="{{ path("fos_user_security_check") }}" method="post" class="form-horizontal">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+            <a href="#">I forgot my password</a><br>
 
-        <div class="form-group">
-            <input type="text" id="username" name="_username" placeholder="{{ 'security.login.username'|trans }}" value="{{ last_username }}" required="required" class="form-control" />
-        </div>
+        </div><!-- /.login-box-body -->
+    </div><!-- /.login-box -->
 
-        <div class="form-group">
-            <input type="password" id="password" name="_password" placeholder="{{ 'security.login.password'|trans }}" required="required" class="form-control" />
-        </div>
 
-        <div class="form-group">
-            <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-            <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-        </div>
-        <div class="form-group">
-            <input class="btn btn-primary btn-block btn-lg" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-        </div>
-    </form>
-</div>
 {% endblock fos_user_content %}
