--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,16 +1,48 @@
-{% extends 'FlowcodeDashboardBundle:Default:layout.html.twig' %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Amulen | Log in</title>
+        <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+        <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet" media="screen">
+        <link href="{{ asset('bundles/flowcodedashboard/css/AdminLTE.min.css') }}" rel="stylesheet" />
+        <!-- iCheck -->
+        <link href="{{ asset('bundles/flowcodedashboard/plugins/iCheck/flat/blue.css') }}" rel="stylesheet" />
 
-{% block body -%}
-    {% for type, messages in app.session.flashbag.all() %}
-        {% for key, message in messages %}
-            <div class="flash-{{ type }}">
-                {{ message|trans({}, 'FOSUserBundle') }}
-            </div>
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body class="login-page">
+        {% for type, messages in app.session.flashbag.all() %}
+            {% for key, message in messages %}
+                <div class="flash-{{ type }}">
+                    {{ message|trans({}, 'FOSUserBundle') }}
+                </div>
+            {% endfor %}
         {% endfor %}
-    {% endfor %}
 
-    {% block content %}
-        {% block fos_user_content %}{% endblock %}
-    {% endblock %}
+    {% block fos_user_content %}{% endblock %}
 
-{% endblock %}
+
+    <script src="{{ asset('bundles/flowcodedashboard/plugins/jQuery/jQuery-2.1.3.min.js')}}"></script>
+{#    <script src="{{ asset('js/jquery.js') }}"></script>#}
+    <script src="{{ asset('js/bootstrap.js') }}"></script>
+    <script src="{{ asset('bundles/flowcodedashboard/plugins/iCheck/icheck.min.js')}}"></script>
+    <script>
+        $(function () {
+            $('input').iCheck({
+                checkboxClass: 'icheckbox_square-blue',
+                radioClass: 'iradio_square-blue',
+                increaseArea: '20%' // optional
+            });
+        });
+    </script>
+</body>
+</html>
+
+
+
